--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,10 @@ permissions:
   contents: write
   actions: read
 
+env:
+  CL: '/std:c++20 /EHsc'
+  CXXFLAGS: '-std=c++20'
+
 defaults:
   run:
     shell: pwsh
