--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ permissions:
   actions: read
 
 env:
+  # Ensure native rebuilds (tree-sitter, node-gyp) compile against C++20 on Windows runners (ADR-0005)
   CL: '/std:c++20 /EHsc'
   CXXFLAGS: '-std=c++20'
 
