--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ env:
   # Ensure native rebuilds (tree-sitter, node-gyp) compile against C++20 on Windows runners (ADR-0005)
   CL: '/std:c++20 /EHsc'
   CXXFLAGS: '-std=c++20'
+  GYP_MSVS_ARGS: '/std:c++20'
+  GYP_CXXFLAGS: '-std=c++20'
 
 defaults:
   run:
