chore: lock node-gyp VS lookup to 2022 (ADR-0005)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,8 @@ env:
   CXXFLAGS: '-std=c++20'
   GYP_MSVS_ARGS: '/std:c++20'
   GYP_CXXFLAGS: '-std=c++20'
+  GYP_MSVS_VERSION: '2022'
+  npm_config_msvs_version: '2022'
 
 defaults:
   run:
