ci(windows): fix commitlint YAML, Playwright install, TruffleHog handling for stable Windows CI

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -175,7 +175,7 @@ jobs:
           pwsh -File scripts/ci/electron-deps-probe.ps1
       - name: Install Playwright browsers
         if: steps.changes-e2e.outputs.any_changed == 'true'
-        run: npx playwright install --with-deps
+        run: npx playwright install
       - name: Run perf smoke (Electron)
         if: steps.changes-e2e.outputs.any_changed == 'true'
         run: npm run test:e2e:perf-smoke
