ci(infra): fix perf-smoke fallback to Playwright Electron; exclude sqlite.bak from TS typecheck; add GH App log downloader (local tooling)

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -45,7 +45,7 @@
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.tsx",
-    "src/**/*.spec.tsx"
+    "src/**/*.spec.tsx",
+    "src/shared/adapters/sqlite.bak/**"
   ]
 }
-
