--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -432,7 +432,8 @@ jobs:
       run:
         shell: pwsh
     needs: quality-gates
-    timeout-minutes: 20
+    timeout-minutes: 25
+    continue-on-error: ${{ matrix.node-version != '20.x' }}
     # Ensure devDependencies are installed for matrix jobs
     env:
       NODE_ENV: development
