--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -789,9 +789,10 @@ jobs:
         with:
           node-version: '20.x'
           cache: 'npm'
-      - name: Install (no scripts)
-        run: npm ci --ignore-scripts
+      - name: Install (prod only, no scripts)
+        run: npm ci --omit=dev --ignore-scripts
       - name: Generate CycloneDX SBOM
+        # Use production tree to avoid dev-only invalid packages on Windows (e.g., dmg-license)
         run: npx --yes @cyclonedx/cyclonedx-npm --output-file sbom.json --spec-version 1.5
       - name: Upload SBOM
         uses: actions/upload-artifact@v4
