--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,10 @@ updates:
     commit-message:
       prefix: "deps"
     ignore:
+      # Avoid Dependabot attempting to update transitive 'ip' package with known issues
+      # Security updates for this transitive may error out via the action runner
+      - dependency-name: "ip"
+        update-types: ["version-update:semver-major", "version-update:semver-minor", "version-update:semver-patch"]
       - dependency-name: "electron"
         update-types: ["version-update:semver-major"]
   - package-ecosystem: "github-actions"
