chore(scripts): add Python helpers to scan/fix ASCII (workflows), actionlint-safe-format, and ESLint auto-fix with logs

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "name":  "gametp",
     "productName":  "Game TP",
     "description":  "A desktop game built with Electron, React 19, Phaser 3, Vite, and TypeScript.",
@@ -8,23 +8,28 @@
     "_trigger_ci":  "Trigger CI/CD pipeline activation",
     "type":  "module",
     "main":  "dist-electron/electron/main.js",
-    "scripts":  {
+  "scripts":  {
                     "dev":  "vite",
                     "build":  "tsc -p electron \u0026\u0026 tsc -b \u0026\u0026 vite build \u0026\u0026 node scripts/ci/postbuild-electron-commonjs.mjs",
                     "clean":  "node scripts/clean.mjs",
                     "init:template":  "node scripts/init-template.mjs",
                     "template:doctor":  "node scripts/template-doctor.mjs",
                     "typecheck":  "tsc -p tsconfig.json --noEmit",
-                    "typecheck:shared": "tsc -p tsconfig.shared.json --noEmit",
-                    "typecheck:services": "tsc -p tsconfig.services.json --noEmit",
-                    "typecheck:middleware": "tsc -p tsconfig.middleware.json --noEmit",
-                    "typecheck:events": "tsc -p tsconfig.events.json --noEmit",
-                    "typecheck:security": "tsc -p tsconfig.security.json --noEmit",
+                    "typecheck:shared":  "tsc -p tsconfig.shared.json --noEmit",
+                    "typecheck:services":  "tsc -p tsconfig.services.json --noEmit",
+                    "typecheck:middleware":  "tsc -p tsconfig.middleware.json --noEmit",
+                    "typecheck:events":  "tsc -p tsconfig.events.json --noEmit",
+                    "typecheck:security":  "tsc -p tsconfig.security.json --noEmit",
                     "lint":  "npm run lint:src \u0026\u0026 npm run lint:tests",
                     "lint:src":  "eslint \"src/**/*.{ts,tsx}\" --max-warnings 115",
                     "lint:tests":  "eslint \"tests/**/*.{ts,tsx,js,mjs}\" --max-warnings 300",
                     "lint:baseline":  "node scripts/eslint-baseline-gate.mjs",
                     "lint:workflows":  "node scripts/ci/validate-all-workflows.cjs",
+                    "workflows:ascii:scan": "py -3 scripts/python/fix_workflows_ascii.py --scan",
+                    "workflows:ascii:fix": "py -3 scripts/python/fix_workflows_ascii.py",
+                    "workflows:actionlint:scan": "py -3 scripts/python/fix_actionlint.py --scan",
+                    "workflows:actionlint:fix": "py -3 scripts/python/fix_actionlint.py --fix",
+                    "lint:eslint:fix": "py -3 scripts/python/fix_eslint.py",
                     "guard:clean":  "node scripts/ci/clean-file-caches.cjs",
                     "format":  "prettier . --write",
                     "format:check":  "prettier . --check",
