ci: upload ESLint pre-fix logs in quality-gates; add non-blocking ESLint pre-fix to build-and-test

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -59,6 +59,10 @@ jobs:
           node-version: 20
           cache: 'npm'
       - run: npm ci
+      - name: ESLint pre-fix (non-blocking)
+        if: runner.os == 'Windows'
+        run: py -3 scripts/python/fix_eslint.py
+        continue-on-error: true
       - name: Lint
         run: npm run lint
       - name: Typecheck
