ci(prefx): add composite actions (eslint/ascii/actionlint) with env toggles; wire into CI + PR; upload ESLint logs

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -61,8 +61,7 @@ jobs:
       - run: npm ci
       - name: ESLint pre-fix (non-blocking)
         if: runner.os == 'Windows'
-        run: py -3 scripts/python/fix_eslint.py
-        continue-on-error: true
+        uses: ./.github/actions/eslint-prefx
       - name: Lint
         run: npm run lint
       - name: Typecheck
