--- a/.github/workflows/pr-gatekeeper.yml
+++ b/.github/workflows/pr-gatekeeper.yml
@@ -37,6 +37,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js (for npx availability)
+        uses: actions/setup-node@v5.0.0
+        with:
+          node-version: '20.x'
+
+      - name: ESLint pre-fix (non-blocking)
+        if: runner.os == 'Windows'
+        uses: ./.github/actions/eslint-prefx
+        continue-on-error: true
+
       - name: Ensure logs directory exists
         run: |
           New-Item -ItemType Directory -Force -Path "logs/ci" | Out-Null
